force-app/main/default/objects/Test_Step_Execution__c/Test_Step_Execution__c.object-meta.xml
<CustomObject>
    <label>Test Step Execution</label>
    <nameField>
        <displayFormat>SP-TSE-{0000}</displayFormat>
        <label>Test Step Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Step Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>