force-app/main/default/objects/Test_Step_Execution__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the tester can not proceed forward with testing they mark this field as blocked</description>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>