force-app/main/default/objects/Test_Step_Execution__c/fields/Test_Step_Execution__c.field-meta.xml
<CustomField>
    <fullName>Test_Step_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test Step Execution</description>
    <label>Test Step Execution</label>
    <referenceTo>Test_Step_Execution__c</referenceTo>
    <relationshipLabel>Test Step Executions</relationshipLabel>
    <relationshipName>Test_Step_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>