force-app/main/default/objects/Test_Step_Execution__c/fields/TestCase__c.field-meta.xml
<CustomField>
    <fullName>TestCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test Case</description>
    <label>TestCase</label>
    <referenceTo>TestCase__c</referenceTo>
    <relationshipLabel>Test Step Executions</relationshipLabel>
    <relationshipName>Test_Step_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>